<resources>
    <string name="app_name">Preview</string>

    <!-- Welcome screen -->
    <string name="welcome_title">Welcome</string>

    <!-- Markets screen -->
    <string name="markets_title">Markets</string>
    <string name="markets_item_market_state_update">Auto-update</string>
    <string name="markets_item_market_state_open">The Spot Market is Open</string>
    <string name="markets_item_market_state_close">The Spot Market is Closed</string>
    <string name="markets_item_precious_title">- - - Precious metals - - -</string>
    <string name="markets_item_base_title">- - - Base metals - - -</string>
    <string name="markets_item_indices_title">- - - Indices metals - - -</string>
    <string name="markets_item_header_updated">Updated at</string>
    <string name="markets_item_header_bid">Bid</string>
    <string name="markets_item_header_ask">Ask</string>
    <string name="markets_item_header_change">Change</string>
    <string name="markets_item_header_change_percent" formatted="false">% Change</string>
    <string name="markets_item_header_price">Price</string>

    <!-- Permission screen -->
    <string name="permission_dialog_camera_permission_rationale">Accept camera permission to unblock all features!</string>
    <string name="permission_description_granted">Permission is granted, you can use all features!</string>
    <string name="permission_description_not_granted">Permission is not granted, some features disabled.</string>
</resources>